<resources>
    <string name="action_about">About</string>
    <string name="account">Account</string>
    <string name="action_new">New</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">BZS Surselva</string>
    <string name="authors">Authors</string>
    <string name="abbreviation">Abbreviation or No.</string>
    <string name="action_logoff">Logoff</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="cc_caption">Caption</string>
    <string name="cc_day">Day</string>
    <string name="cc_master_data">Master Data</string>
    <string name="cc_no">No</string>
    <string name="cc_room">Room No. or Abbreviation</string>
    <string name="cc_rooms">Rooms</string>
    <string name="cc_subject">Subject</string>
    <string name="cc_subjects">Subjects</string>
    <string name="cc_teacher">Teachers</string>
    <string name="cc_would_you_like_to_delete_the_lesson">Would you like to delete the lesson?</string>
    <string name="cc_would_you_like_to_delete_the_subject">Would you like to delete the subject?</string>
    <string name="cc_would_you_like_to_delete_the_teacher">Would you like to delete this teacher?</string>
    <string name="cc_would_you_like_to_delete_the_room">Would you like to delete the room?</string>
    <string name="cc_yes">Yes</string>
    <string name="enter_email_to_retrieve_credentials">Enter your email address and we will send the credentials to you.</string>
    <string name="email">Email</string>
    <string name="email_not_valid">The email is not valid.</string>
    <string name="error">Error</string>
    <string name="error_while_register">Error while registering.</string>
    <string name="from">From</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="login">Login</string>
    <string name="newText">newText</string>
    <string name="not_available">not available</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="password_forgotten">Password forgotten</string>
    <string name="password_verification">Password Verification</string>
    <string name="passwords_do_not_match">The passwords do not match.</string>
    <string name="please_wait">Please wait</string>
    <string name="room_no">Room name and No.</string>
    <string name="review">Review</string>
    <string name="room">Room</string>
    <string name="remark">Remark</string>
    <string name="retrieve">Retrieve</string>
    <string name="register">Register</string>
    <string name="subject">Subject</string>
    <string name="support">Support</string>
    <string name="title">Title</string>
    <string name="title_activity_password">Retrieve Credentials</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_lesson">Lesson</string>
    <string name="title_masterdata">MasterData</string>
    <string name="title_activity_subject_edit">Edit Subject</string>
    <string name="title_activity_subject_overview">Subject Overview</string>
    <string name="title_activity_teacher"> Edit Teacher</string>
    <string name="title_activity_teacher_overview">Teacher Overview</string>
    <string name="title_activity_room_edit">Edit Room</string>
    <string name="title_activity_room_overview">Room Overview</string>
    <string name="timetable">Timetable</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_caption">Caption</string>
    <string name="teacher_abbreviation">Abbreviation</string>
    <string name="to">To</string>
    <string name="unknown_error_occurred">An unknown error occurred.</string>
    <string name="version">Version</string>
    <string name="cc_buttonLeft">&lt;</string>
    <string name="cc_buttonEnd">&gt;</string>
    <string name="daysOfWeek">daysOfWeek</string>

</resources>