<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.bzs_surselva.schoolplanner.PasswordActivity"
    android:orientation="vertical">

    <TextView android:text="@string/enter_email_to_retrieve_credentials" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMessage" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/email" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrieve"
        android:id="@+id/buttonRetrieve" />

</LinearLayout>
